feat: propagate common module overhaul from 1.21.4
- SoundResolver, FlowChatRule aliases, notifyStyle, anti-echo guard
- FlowChatTestRunner (27 self-tests)
- JUnit 4 test suite (59 tests)
- Design spec document