@@ -47,7 +47,7 @@ public class FlowChatConfig {
 
     private void createDefault() throws IOException {
         Files.createDirectories(configPath.getParent());
-Files.write(configPath, "{\n  \"incoming\": [],\n  \"outgoing\": []\n}\n".getBytes(java.nio.charset.StandardCharsets.UTF_8));
+        Files.writeString(configPath, "{\n  \"incoming\": [],\n  \"outgoing\": []\n}\n");
         LOGGER.info("Created default config at {}", configPath);
     }
 
